--- a/notebooks/baseline_agents.ipynb
+++ b/notebooks/baseline_agents.ipynb
@@ -190,7 +190,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Documents space consists of a slate of 10 items where each document is  represented by a 20 dimensional vector. Each element is a float in range [-1,1]."
+    "Documents space consists of a slate of 10 items where each document is  represented by a 20 dimensional, one hot encoded vector over 20 topics."
    ]
   },
   {
